resolved layout problem

--- a/styles/style.css
+++ b/styles/style.css
@@ -95,6 +95,7 @@ nav .nav-links li a:hover {
   line-height: 27px;
   letter-spacing: 0.5px;
   margin-top: 15px;
+  margin-right:30px;
 }
 .banner .text-content .buttons {
   display: flex;
@@ -204,7 +205,7 @@ nav .nav-links li a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   gap: 20px;
   max-width: 252px;
 }
@@ -221,6 +222,7 @@ nav .nav-links li a:hover {
   text-align: center;
   color: var(--text);
   line-height: 24px;
+  font-size: 16px;
 }
 
 /* run-section */
@@ -565,6 +567,7 @@ footer .container .description .about > h2 {
   font-style: italic;
   font-weight: 800;
   cursor: pointer;
+  margin-bottom: 15px;
 }
 footer .container .description .about > p {
   color: var(--text);
@@ -642,9 +645,7 @@ footer .container .description .about > p {
     width: 100%;
     padding-left: 40px;
   }
-
   .teams > p {
-  
     margin-left:0;
     margin-right:0;
    
@@ -754,10 +755,10 @@ footer .container .description .about > p {
   .calculator .form input,
   select {
     height: 40px;
-    width: 180px;
+    width: 140px;
   }
   .calculator .form #special {
-    width: 370px;
+    width: 290px;
     height: 40px;
   }
 
@@ -779,15 +780,7 @@ footer .container .description .about > p {
     margin-top: 0px;
   }
 }
-@media screen and (max-width: 389px) {
-  .calculator .form input,
-  select {
-    width: 190px;
-  }
-  .calculator .form #special {
-    width: 300px;
-  }
-}
+
 
 
 
